--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
                 <button class="RPSbutton" id="RPSbutton">Rock Paper Scissors!</button>
                 <button class="c4Button" id="c4Button">Connect Four!</button>
             </section>
+            <section class="titles">
+                <h1 class="welcomeTitle" id="welcomeTitle">Welcome to the 3Game Website!!</h1>
+            </section>
 
+            <img class="RPSpic" id="RPSpic" src="RPSpic.jpg">
+            <img class="c4Pic" id="c4Pic" src="connect4Pic.png">
+            <img class="tictactoePic" id="tictactoePic" src="tictactoePic.png">
 
         </main>
 
