--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
 
     <body>
         
-        <div class="monkey" id="monkey"></div>
-        <div class="chad" id="chad"></div>
-        <div class="beetlejuice" id="beetlejuice"></div>
+        <section class="randPics" id="randPics">
+            <div class="monkey" id="monkey"></div>
+            <div class="chad" id="chad"></div>
+            <div class="beetlejuice" id="beetlejuice"></div>
+            <div class="kevin" id="kevin"></div>
+            <div class="rique" id="rique"></div>
+            <div class="beetlejuice" id="beetlejuice"></div>
+            <div class="beetlejuice" id="beetlejuice"></div>
+            <div class="beetlejuice" id="beetlejuice"></div>
+            <div class="beetlejuice" id="beetlejuice"></div>
+            <div class="beetlejuice" id="beetlejuice"></div>
+        </section>
 
         <button class="ticButton" onclick="tictactoe()" id="ticButton">TicTacToe!</button>
         <button class="RPSbutton" onclick="RPS()" id="RPSbutton">Rock Paper Scissors!</button>
@@ -21,7 +30,6 @@
         <img class="RPSpic" id="RPSpic" src="RPSpic.jpg">
         <img class="c4Pic" id="c4Pic" src="connect4Pic.png">
         <img class="tictactoePic" id="tictactoePic" src="tictactoePic.png">
-        
 
     </body>
 
