--- a/index.html
+++ b/index.html
@@ -9,16 +9,7 @@
     <body>
         
         <section class="randPics" id="randPics">
-            <div class="monkey" id="monkey"></div>
-            <div class="chad" id="chad"></div>
-            <div class="beetlejuice" id="beetlejuice"></div>
-            <div class="kevin" id="kevin"></div>
-            <div class="rique" id="rique"></div>
-            <div class="beetlejuice" id="beetlejuice"></div>
-            <div class="beetlejuice" id="beetlejuice"></div>
-            <div class="beetlejuice" id="beetlejuice"></div>
-            <div class="beetlejuice" id="beetlejuice"></div>
-            <div class="beetlejuice" id="beetlejuice"></div>
+            <div class="funnyPic" id="funnyPic"></div>
         </section>
 
         <button class="ticButton" onclick="tictactoe()" id="ticButton">TicTacToe!</button>
