implemented rps game

--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
             <div class="funnyPic" id="funnyPic"></div>
         </section>
 
+        <div class="RPScompImg" id="RPScompPic"></div>
+        <div class="RPSplayerImg" id="RPSplayerPic"></div>
+
+
         <div class="buttons" id="hideaway">
             <button class="ticButton" onclick="tictactoe(); dissapear()" id="ticButton">TicTacToe!</button>
-            <button class="RPSbutton" onclick="RPS(); dissapear()" id="RPSbutton">Rock Paper Scissors!</button>
+            <button class="RPSbutton" onclick="dissapear(); RPSNameBox();" id="RPSbutton">Rock Paper Scissors!</button>
             <button class="c4Button" onclick="c4(); dissapear()" id="c4Button">Connect Four!</button>
 
             <h1 class="welcomeTitle" id="welcomeTitle">Welcome to the 3Game Website!!</h1>
@@ -23,6 +27,14 @@
             <img class="c4Pic" id="c4Pic" src="connect4Pic.png">
             <img class="tictactoePic" id="tictactoePic" src="tictactoePic.png">
         </div>
+
+        <center><input type="text" id="RPSnameBox" style="font-size: 25px; display: none;" placeholder="Enter your name"/></center>
+        <center><button class="RPSEnterButton"  style="display: none;" onclick="RPS()" id="RPSEnterButton" name="button" value="Enter" type="submit">Enter</button></center>
+        <p class="RPSname" id="RPSname"></p>
+        <p class="RPSvs" id="RPSvs"></p>
+        <p class="RPSopponentname" id="RPSopponent"></p>
+        <p class="RPSwinner" id="RPSwinner"></p>
+        <p class="reloadMessage" id="reloadMessage"></p>
     </body>
 
 </html>
