chnagel alignment on RPS and color of text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <!-- Displays the name box to enter the users name, the Enter button and the Reset button -->
-        <center><input type="text" id="RPSnameBox" style="font-size: 25px; display: none;" placeholder="Enter your name"/></center>
+        <center><input type="text" id="RPSnameBox" class="RPSnameBox" style="display: none;" placeholder="Enter your name"/></center>
         <center><button class="RPSEnterButton"  style="display: none;" onclick="RPS()" id="RPSEnterButton" name="button" value="Enter" type="submit">Enter</button></center>
         <center><button class="RPSresetButton"  style="display: none;" onclick="reset()" id="RPSresetButton" type="submit">RESET</button></center>
 
