--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
     <head>
         <title>3Game Website</title>
         <!-- imports the css and javascript files that are being used to display everything -->
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="3Game.css">
-        <script src="./indexJS.js"></script>
         <script src="./tictactoe.js"></script>
+        <link rel="stylesheet" href="ticStyle.css">
     </head>
 
     <body>
@@ -34,37 +37,42 @@
 
         <!-- Displays the name box to enter the users name, the Enter button and the Reset button -->
         <center><input type="text" id="RPSnameBox" class="RPSnameBox" style="display: none;" placeholder="Enter your name"/></center>
-        <center><button class="RPSEnterButton"  style="display: none;" onclick="RPS()" id="RPSEnterButton" name="button" value="Enter" type="submit">Enter</button></center>
-        <center><button class="RPSresetButton"  style="display: none;" onclick="reset()" id="RPSresetButton" type="submit">RESET</button></center>
+        <center><button class="RPSEnterButton"  style="display: none;" onclick="RPS(); removeNameBox()" id="RPSEnterButton" name="button" value="Enter" type="submit">Enter</button></center>
 
         <!-- Info for the RPS game, like the user and computer name, score count and winner message -->
         <p class="RPSname" id="RPSname"></p>
         <p class="RPSvs" id="RPSvs"></p>
         <p class="RPSopponentname" id="RPSopponent"></p>
         <p class="RPSwinner" id="RPSwinner"></p>
-        <p class="reloadMessage" id="reloadMessage"></p>
         <h1 class="RPSplayerScore" id="RPSplayerScore"></h1>
         <h1 class="RPScompScore" id="RPScompScore"></h1>
-
-        <!-- TICTACTOE GAME -->
-
-        <!-- Creates the bord for the game -->
-        <div class="ticBoard" id="ticBoard" style="display: none;">
-            <div class="ticCell" data-cell></div>
-            <div class="ticCell" data-cell></div>
-            <div class="ticCell" data-cell></div>
-            <div class="ticCell" data-cell></div>
-            <div class="ticCell" data-cell></div>
-            <div class="ticCell" data-cell></div>
-            <div class="ticCell" data-cell></div>
-            <div class="ticCell" data-cell></div>
-            <div class="ticCell" data-cell></div>
+        <div class="winning-message1" id="winningMessage1">
+            <div data-winning-message-text1></div>
+            <button id="restartButton1">Restart</button>
         </div>
-                   
-        <!-- RESET BUTTON -->
-        <button class="ticResetButton" id="ticResetButton" style="display: none;">RESET</button>
-
+        <script src="./indexJS.js"></script>
 
     </body>
+
+
+    <!--****** TICTACTOE SETUP ******-->
+    <body>
+        <h1 class="ticTitle" id="ticTitle" style="display: none;">TIC-TAC-TOE</h1>
+        <div class="board" id="board">
+          <div id = "cell" class="cell" data-cell></div>
+          <div id = "cell1" class="cell" data-cell></div>
+          <div id = "cell2" class="cell" data-cell></div>
+          <div id = "cell3" class="cell" data-cell></div>
+          <div id = "cell4" class="cell" data-cell></div>
+          <div id = "cell5" class="cell" data-cell></div>
+          <div id = "cell6" class="cell" data-cell></div>
+          <div id = "cell7" class="cell" data-cell></div>
+          <div id = "cell8" class="cell" data-cell></div>
+        </div>
+        <div class="winning-message" id="winningMessage">
+          <div data-winning-message-text></div>
+          <button id="restartButton">Restart</button>
+        </div>
+      </body>
 
 </html>
