--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <button id="RPSrock" class="RPSrock" style="display: none;" onclick="RPSrock(); playerChoice(); computerChoice(); winner()">ROCK!</button>
         <button id="RPSpaper" class="RPSpaper" style="display: none;" onclick="RPSpaper(); playerChoice(); computerChoice(); winner()">PAPER!</button>
         <button id="RPSscissors" class="RPSscissors" style="display: none;" onclick="RPSscissors(); playerChoice(); computerChoice(); winner()">SCISSORS!</button>
+        <h3 id="RPSwinningMessage" class="RPSwinningMessage" style="display: none;"></h3>
         <!--<h1 class="RPSplayerScore" id="RPSplayerScore"></h1>
         <h1 class="RPScompScore" id="RPScompScore"></h1>-->
         <script src="./indexJS.js"></script>
@@ -76,6 +77,10 @@
     <!--****** TICTACTOE SETUP ******-->
     <body>
         <h1 class="ticTitle" id="ticTitle" style="display: none; font-size: 50px;" >TIC-TAC-TOE</h1>
+        <!--3 buttons with 3 different difficulties for the user to pick from-->
+        <button id="ticPvPbutton" class="ticPvPbutton" style="display: none;">Play PvP!</button>
+        <button id="ticEasyPvCbutton" class="ticEasyPvCbutton" style="display: none;">Play PvC (easy)!</button>
+        <button id="ticHardPvCbutton" class="ticHardPvCbutton" style="display: none;"> Play PvC (hard)!</button>
         <div class="board" id="board">
           <div id = "cell" class="cell" data-cell></div>
           <div id = "cell1" class="cell" data-cell></div>
