tic buttons alignment

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 
     <!--****** TICTACTOE SETUP ******-->
     <body>
-        <h1 class="ticTitle" id="ticTitle" style="display: none; font-size: 50px;" >TIC-TAC-TOE</h1>
+        <h1 class="ticTitle" id="ticTitle" style="display: none; font-size: 50px; top: 0%; position: absolute; margin-left: 40%;" >TIC-TAC-TOE</h1>
         <!--3 buttons with 3 different difficulties for the user to pick from-->
-        <button id="ticPvPbutton" class="ticPvPbutton" style="display: none;">Play PvP!</button>
-        <button id="ticEasyPvCbutton" class="ticEasyPvCbutton" style="display: none;">Play PvC (easy)!</button>
-        <button id="ticHardPvCbutton" class="ticHardPvCbutton" style="display: none;"> Play PvC (hard)!</button>
+        <button id="ticPvPbutton" class="ticPvPbutton" style="display: none;">PvP!</button>
+        <button id="ticEasyPvCbutton" class="ticEasyPvCbutton" style="display: none;">PvC (easy)!</button>
+        <button id="ticHardPvCbutton" class="ticHardPvCbutton" style="display: none;">PvC (hard)!</button>
         <div class="board" id="board">
           <div id = "cell" class="cell" data-cell></div>
           <div id = "cell1" class="cell" data-cell></div>
