fixed tic main screen and PvP button

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img class="c4Pic" id="c4Pic" src="connect4Pic.png">
             </div>
             <div class="ticMbutton">
-            <button class="ticButton" onclick="dissapear(); ticMain()" id="ticButton">TicTacToe!</button>
+            <button class="ticButton" onclick="dissapear(); appearTicMain()" id="ticButton">TicTacToe!</button>
             </div>
             <div class="ticMpic">   
                 <img class="tictactoePic" id="tictactoePic" src="tictactoePic.png">
@@ -76,11 +76,12 @@
 
     <!--****** TICTACTOE SETUP ******-->
     <body>
-        <h1 class="ticTitle" id="ticTitle" style="display: none; font-size: 50px; top: 0%; position: absolute; margin-left: 40%;" >TIC-TAC-TOE</h1>
+        <h1 class="ticTitle" id="ticTitle" style="display: none; font-size: 70px; top: 0%; position: absolute; margin-left: 31%;" >TIC-TAC-TOE</h1>
         <!--3 buttons with 3 different difficulties for the user to pick from-->
-        <button id="ticPvPbutton" class="ticPvPbutton" style="display: none;">PvP!</button>
+        <button id="ticPvPbutton" class="ticPvPbutton" style="display: none;" onclick="ticPvP()">PvP!</button>
         <button id="ticEasyPvCbutton" class="ticEasyPvCbutton" style="display: none;">PvC (easy)!</button>
         <button id="ticHardPvCbutton" class="ticHardPvCbutton" style="display: none;">PvC (hard)!</button>
+        <p class="ticModePick" id="ticModePick" style="display: none;">Pick A Mode to Play!</p>
         <div class="board" id="board">
           <div id = "cell" class="cell" data-cell></div>
           <div id = "cell1" class="cell" data-cell></div>
