--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!--****** TICTACTOE SETUP ******-->
     <body>
-        <h1 class="ticTitle" id="ticTitle" style="display: none; font-size: 70px; top: 10%; position: absolute; margin-left: 31%;" >TIC-TAC-TOE</h1>
+        <h1 class="ticTitle" id="ticTitle" style="display: none; font-size: 70px; margin-top: 12%; position: absolute; margin-left: 29%;" >TIC-TAC-TOE</h1>
         <!--3 buttons with 3 different difficulties for the user to pick from-->
         <button id="ticPvPbutton" class="ticPvPbutton" style="display: none;" onclick="ticPvP()">PvP!</button>
         <button id="ticEasyPvCbutton" class="ticEasyPvCbutton" style="display: none;">PvC (easy)!</button>
