--- a/rpsPage.html
+++ b/rpsPage.html
@@ -25,8 +25,8 @@
 
         <!-- Display players names and scores -->
         <center><div id="scoreBoardMsg" style="display: none;">
-            <span id="scoreMsg" style="font-size: 40px; font-weight: bolder; font-family: cursive; color: white;">SCORE&nbsp;</span>
-            <span id="boardMsg" style="font-size: 40px; font-weight: bolder; font-family: cursive; color: black;">BOARD:</span>
+            <span id="scoreMsg" style="font-size: 40px; font-weight: bolder; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: white;">SCORE&nbsp;</span>
+            <span id="boardMsg" style="font-size: 40px; font-weight: bolder; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: black;">BOARD:</span>
         </div></center>
 
         <center><div class="pvpDisplay" id="pvpDisplay" style="display: none;">
