rps names size and picture DIV alignment

--- a/rpsPage.html
+++ b/rpsPage.html
@@ -24,7 +24,7 @@
 
 
         <!-- Display players names and scores -->
-        <center><div id="scoreBoardMsg" style="display: none;">
+        <center><div id="scoreBoardMsg" style="display: none; margin-top: -3%;">
             <span id="scoreMsg" style="font-size: 40px; font-weight: bolder; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: white;">SCORE&nbsp;</span>
             <span id="boardMsg" style="font-size: 40px; font-weight: bolder; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: black;">BOARD:</span>
         </div></center>
@@ -37,7 +37,7 @@
             <hr style="border: 5px solid black;">
             <!-- Player1 Choice -->
             <div class="player1Pic" id="player1Pic"></div>
-            <div style="border: 3px solid white; transform: rotate(90deg) translateX(-117px); width: 320px; "></div>
+            <div style="border: 3px solid white; transform: rotate(90deg) translateX(-100px); width: 345px; "></div>
             <!-- Player2 Choice -->
             <div class="player2Pic" id="player2Pic"></div>
         </div></center>
