fixed file paths

--- a/HTML/main.html
+++ b/HTML/main.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>3 Game Website</title>
-        <link  rel="stylesheet" href="styleMainPage.css">
+        <link  rel="stylesheet" href="/CSS/styleMainPage.css">
     </head>
 
     <body>
@@ -27,13 +27,13 @@
         <!-- Div holding the 3 option buttons and images -->
         <center><div class="mainButtonsDiv">
             <center><button class="rpsButton" id="rpsButton" onclick="window.location.href='rpsGamemodes.html'">ROCK PAPER SCISSORS</button></center>
-            <center><img class="rpsPic" id="rpsPic" src="rpsPicc.jpg"></center>
+            <center><img class="rpsPic" id="rpsPic" src="/IMAGES/rpsPicc.jpg"></center>
             <hr style="border: 2px solid black;">
             <center><button class="ticButton" id="ticButton" onclick="window.location.href='ticPage.html'">TIC-TAC-TOE</button></center>
-            <center><img class="ticPic" id="ticPic" src="tictactoePic.png"></center>
+            <center><img class="ticPic" id="ticPic" src="/IMAGES/tictactoePic.png"></center>
             <hr style="border: 2px solid black;">
             <center><button class="c4Button" id="c4Button" onclick="window.location.href='c4Page.html'">CONNECT 4</button></center>
-            <center><img class="c4Pic" id="c4Pic" src="connect4Pic.png"></center>
+            <center><img class="c4Pic" id="c4Pic" src="/IMAGES/connect4Pic.png"></center>
         </div></center>
 
     </body>
