--- a/HTML/rpsGamemodes.html
+++ b/HTML/rpsGamemodes.html
@@ -18,7 +18,7 @@
         <center><div class="buttonsDiv" id="buttonsDiv">
             <button class="pvp" onclick="window.location.href='rpsPage.html'">Play PvP!</button>
             <button class="pvc" onclick="window.location.href='rpsPvcPage.html'">Play PvC!</button>
-            <button class="return" onclick="window.location.href='index.html'">Return to main page</button>
+            <button class="return" onclick="window.location.href='main.html'">Return to main page</button>
         </div></center>
 
         <!-- Display placeholder for PvC -->
