--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="main.html">Go to main page</a>
+    <a href="/HTML/main.html">Go to main page</a>
 </body>
 </html>
