--- a/HTML/rpsPvcPage.html
+++ b/HTML/rpsPvcPage.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Rock Pape Scissors</title>
-        <link rel="stylesheet" href="rpsPvpStyle.css">
-        <script src="./rpsCode.js"></script>
+        <link rel="stylesheet" href="/CSS/rpsPvpStyle.css">
+        <script src="/JAVASCRIPT/rpsCode.js"></script>
     </head>
 
     <body>
